<resources>
    <string name="app_name">TodoList</string>
    <string name="type_category">Topic date name</string>
    <string name="add_task">Add Task</string>
    <string name="today">Today,</string>
    <string name="time">10:01am</string>
    <string name="choose_time">choose time</string>
    <string-array name="timeSpan_array">
        <item>Daily</item>
        <item>Monthly</item>
        <item>yearly</item>
        <item>weekly</item>
        <item>other..</item>
    </string-array>

    <string name="add_list_here">add task…</string>
    <string name="add_task_description">Task Description…</string>
    <string name="select_date_of_reminder">Select date of reminder</string>
    <string name="defaults">Daily Task</string>
    <string name="daily">Daily</string>
    <string name="create_topic">Create Topic</string>
    <string name="comma">,</string>
    <string name="drop_down">drop down</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
