<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoList">

    <EditText
        android:id="@+id/text_todolist_text"
        style="@style/simpleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/add_list_here"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtview_date"
        style="@style/simpleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/today"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_todolist_text"
        app:layout_constraintTop_toBottomOf="@+id/text_todolist_text" />

    <TextView
        android:id="@+id/textView_time"
        style="@style/simpleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/txtview_date"
        app:layout_constraintTop_toBottomOf="@+id/text_todolist_text" />

    <TextView
        android:id="@+id/txtView_choosetime"
        style="@style/simpleDefault"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:hint="@string/choose_time"
        app:layout_constraintStart_toStartOf="@+id/spinner_timespan_topic"
        app:layout_constraintTop_toBottomOf="@+id/spinner_timespan_topic" />

    <Button
        android:id="@+id/btn_addtask"
        style="@style/simpleDefault"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:text="@string/add_task"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_time" />

    <TextView
        android:id="@+id/spinner_timespan_topic"
        style="@style/simpleDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/daily"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_todolist_text"
        app:layout_constraintTop_toBottomOf="@+id/text_todolist_text" />

    <TextView
        android:id="@+id/actv_category_topic"
        style="@style/simpleDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/defaults"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_todolist_text"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>