<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Topic">

    <Spinner
        android:id="@+id/spinner_timespan"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/timeSpan_array"
        app:layout_constraintEnd_toEndOf="@+id/txv_date"
        app:layout_constraintStart_toStartOf="@+id/txv_date"
        app:layout_constraintTop_toBottomOf="@+id/txv_date" />

    <Button
        android:id="@+id/button"
        style="@style/simpleDefault"
        android:layout_width="142dp"
        android:layout_height="61dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/bitter"
        android:text="@string/create_topic"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="createTopic"
        app:layout_constraintEnd_toEndOf="@+id/txv_date"
        app:layout_constraintTop_toBottomOf="@+id/txv_date" />

    <TextView
        android:id="@+id/txv_date"
        style="@style/simpleDefault"
        android:layout_width="207dp"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:text="@string/select_date_of_reminder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/actv_category_topic"
        app:layout_constraintTop_toBottomOf="@+id/actv_category_topic" />

    <AutoCompleteTextView
        android:id="@+id/actv_category_topic"
        style="@style/simpleDefault"
        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginTop="64dp"
        android:hint="@string/type_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:contentDescription="@string/drop_down"
        android:id="@+id/img_cat_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/actv_category_topic"
        app:layout_constraintTop_toTopOf="@+id/actv_category_topic"
        app:srcCompat="@drawable/ic_ac_category_dp" />

</androidx.constraintlayout.widget.ConstraintLayout>